--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 mysqlclient==2.2.4
 PyJWT==2.9.0
+python-dotenv==1.0.1
 PyYAML==6.0.2
 referencing==0.35.1
 rpds-py==0.20.0
